--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 sudo: false
 language: go
+go:
+  - 1.10.x
+  - 1.11.x
+  - 1.12.x
+  - 1.13.x
 git:
     depth: 1
+before_install:
+  - go get -v golang.org/x/lint/golint
 install: go get -v github.com/gohugoio/hugo
 script:
     ‐ hugo
