--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,7 @@ language: c
 os:
   - linux
 
-install:
-  - wget --quiet https://github.com/gohugoio/hugo/releases/download/v0.58.3/hugo_0.58.3_Linux-64bit.tar.gz
-  - tar xzvf hugo_0.58.3_Linux-64bit.tar.gz
-  - export PATH=$PATH:$PWD
+install: go get -v github.com/gohugoio/hugo
 
 script:
   - hugo
